--- a/add.html
+++ b/add.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-    helo world
-    </h1>
+    i am suhail
+    <img src="rs.jpg.webp" alt="rs image">
 </body>
 </html>
